# computer_enhance

./: .gitignore
haversine/: Cargo.toml
haversine/outputs/: probe_forward.csv
haversine/src/: allocator.rs  calc.rs  cpu_profiling.rs  generate.rs  main.rs  parse.rs  repetition_tester.rs  util.rs
haversine_macro/: Cargo.toml
haversine_macro/src/: lib.rs
misc/: loop  loop.c  mach_absolute_time  mach_absolute_time.c
profiler/: Cargo.toml
profiler/src/: lib.rs  metrics.rs  timings.rs
profiler_macro/: Cargo.toml
profiler_macro/src/: lib.rs
sim8086/: Cargo.toml
sim8086/src/: exec.rs  main.rs  parse.rs
