[package]
name = "haversine"
version = "0.1.0"
edition = "2021"

[features]
profile = ["profiler/profile", "profiler_macro/profile"]
mmap_alloc = []
default = ["mmap_alloc"]

[dependencies]
rand = "0.9.0"
tempfile = "3.18.0"
profiler = { path = "../profiler" }
profiler_macro = { path = "../profiler_macro" }
haversine_macro = { path = "../haversine_macro" }
libc = "0.2.172"
mach2 = "0.4.2"
const-str = "0.6.2"

[profile.dev]
opt-level = 1
